change some logics for product and fix bugs